fixed the mobile view and scrollbar issue in committee-summaries component

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,8 +2,9 @@
 
 .total-screen {
   display: flex;
-  min-height: 90vh;
+  height: calc(100vh - #{constants.$header-height});
   margin-top: constants.$header-height;
+  overflow: hidden;
 }
 
 app-sidebar {
@@ -18,6 +19,8 @@ app-sidebar {
   flex-grow: 1;
   padding-left: 25px;
   padding-top: 16px;
+  height: 100%;
+  overflow: auto;
 }
 
 .main-content.login-page {
