--- a/src/styles.scss
+++ b/src/styles.scss
@@ -68,6 +68,7 @@ body {
 html,
 body {
   height: 100%;
+  overflow: hidden;
 }
 body {
   margin: 0;
